--- a/board/src/main/resources/application.properties
+++ b/board/src/main/resources/application.properties
@@ -4,6 +4,7 @@ spring.datasource.hikari.jdbc-url=jdbc:log4jdbc:mysql://localhost:3306/board?ser
 spring.datasource.hikari.username=root
 spring.datasource.hikari.password=1234
 spring.datasource.hikari.connection-test-query=SELECT NOW() FROM dual
+spring.mvc.converters.preferred-json-mapper=gson
 
 #MyBatis
 mybatis.configuration.map-underscore-to-camel-case=true
